fixed issue with crumbs not showing well, fixed issue with srollview container damaging design for listviews, and added a json style options for data-context

--- a/experiments/splitview/jquery.mobile.splitview.css
+++ b/experiments/splitview/jquery.mobile.splitview.css
@@ -25,6 +25,10 @@ body {
   z-index: 100;
 }
 
+.ui-crumbs {
+  max-width: 25%;
+}
+
 .splitview .ui-splitview-hidden {
   display:none;
 }
